parsers/ddl_parser.go
// Code generated from DDLParser.g4 by ANTLR 4.7.1. DO NOT EDIT.

package ddlparser // DDLParser
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "'='", "';'", "','", "'('", "')'", "'~'",
	"'!'", "'+'", "'-'",
}
var symbolicNames = []string{
	"", "AUTO_INCREMENT", "BIGINT", "BINARY", "BIT", "BLOB", "BTREE", "BOOLEAN",
	"BOOL", "CHARACTER", "CHARSET", "CHAR", "COLLATE", "COMMENT", "CONSTRAINT",
	"CREATE", "CURRENT_TIMESTAMP", "DATETIME", "DATE", "DECIMAL", "DEC", "DEFAULT",
	"DOUBLE", "ENGINE", "ENUM", "EXISTS", "FALSE", "FIXED", "FLOAT", "HASH",
	"INDEX", "IF", "INTEGER", "INT", "JSON", "KEY_BLOCK_SIZE", "KEY", "LOCALTIMESTAMP",
	"LOCALTIME", "LONGBLOB", "LONGTEXT", "MEDIUMBLOB", "MEDIUMINT", "MEDIUMTEXT",
	"NATIONAL", "NCHAR", "NOT", "NOW", "NULL", "NUMERIC", "NVARCHAR", "ON",
	"PARSER", "PRECISION", "PRIMARY", "REAL", "SERIAL", "SET", "SIGNED", "SMALLINT",
	"TABLE", "TEMPORARY", "TEXT", "TIMESTAMP", "TIME", "TINYBLOB", "TINYINT",
	"TINYTEXT", "TRUE", "UNIQUE", "UNSIGNED", "UPDATE", "USING", "VALUE", "VARBINARY",
	"VARCHAR", "VARYING", "WITH", "YEAR", "ZEROFILL", "Equal", "Semicolon",
	"Comma", "LeftParenthesis", "RightParenthesis", "Tilde", "Exclamation",
	"Plus", "Minus", "Integer", "Number", "FilesizeLiteral", "Literal", "PlaceholderString",
	"BackQuotedString", "RawString", "SPACE", "BLOCK_COMMENT", "LINE_COMMENT",
}

var ruleNames = []string{
	"root", "createTableDDL", "tableName", "ifNotExists", "createDefinitions",
	"createDefinition", "columnDefinition", "dataType", "lengthOneDimension",
	"lengthTwoDimension", "lengthTwoOptionalDimension", "collectionOptions",
	"columnConstraint", "nullNotNull", "comment", "defaultValue", "primaryKey",
	"unaryOperator", "constant", "currentTimestamp", "tableConstraint", "indexOption",
	"indexType", "indexColumnNames", "tableOption",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type DDLParser struct {
	*antlr.BaseParser
}

func NewDDLParser(input antlr.TokenStream) *DDLParser {
	this := new(DDLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "DDLParser.g4"

	return this
}

// DDLParser tokens.
const (
	DDLParserEOF               = antlr.TokenEOF
	DDLParserAUTO_INCREMENT    = 1
	DDLParserBIGINT            = 2
	DDLParserBINARY            = 3
	DDLParserBIT               = 4
	DDLParserBLOB              = 5
	DDLParserBTREE             = 6
	DDLParserBOOLEAN           = 7
	DDLParserBOOL              = 8
	DDLParserCHARACTER         = 9
	DDLParserCHARSET           = 10
	DDLParserCHAR              = 11
	DDLParserCOLLATE           = 12
	DDLParserCOMMENT           = 13
	DDLParserCONSTRAINT        = 14
	DDLParserCREATE            = 15
	DDLParserCURRENT_TIMESTAMP = 16
	DDLParserDATETIME          = 17
	DDLParserDATE              = 18
	DDLParserDECIMAL           = 19
	DDLParserDEC               = 20
	DDLParserDEFAULT           = 21
	DDLParserDOUBLE            = 22
	DDLParserENGINE            = 23
	DDLParserENUM              = 24
	DDLParserEXISTS            = 25
	DDLParserFALSE             = 26
	DDLParserFIXED             = 27
	DDLParserFLOAT             = 28
	DDLParserHASH              = 29
	DDLParserINDEX             = 30
	DDLParserIF                = 31
	DDLParserINTEGER           = 32
	DDLParserINT               = 33
	DDLParserJSON              = 34
	DDLParserKEY_BLOCK_SIZE    = 35
	DDLParserKEY               = 36
	DDLParserLOCALTIMESTAMP    = 37
	DDLParserLOCALTIME         = 38
	DDLParserLONGBLOB          = 39
	DDLParserLONGTEXT          = 40
	DDLParserMEDIUMBLOB        = 41
	DDLParserMEDIUMINT         = 42
	DDLParserMEDIUMTEXT        = 43
	DDLParserNATIONAL          = 44
	DDLParserNCHAR             = 45
	DDLParserNOT               = 46
	DDLParserNOW               = 47
	DDLParserNULL              = 48
	DDLParserNUMERIC           = 49
	DDLParserNVARCHAR          = 50
	DDLParserON                = 51
	DDLParserPARSER            = 52
	DDLParserPRECISION         = 53
	DDLParserPRIMARY           = 54
	DDLParserREAL              = 55
	DDLParserSERIAL            = 56
	DDLParserSET               = 57
	DDLParserSIGNED            = 58
	DDLParserSMALLINT          = 59
	DDLParserTABLE             = 60
	DDLParserTEMPORARY         = 61
	DDLParserTEXT              = 62
	DDLParserTIMESTAMP         = 63
	DDLParserTIME              = 64
	DDLParserTINYBLOB          = 65
	DDLParserTINYINT           = 66
	DDLParserTINYTEXT          = 67
	DDLParserTRUE              = 68
	DDLParserUNIQUE            = 69
	DDLParserUNSIGNED          = 70
	DDLParserUPDATE            = 71
	DDLParserUSING             = 72
	DDLParserVALUE             = 73
	DDLParserVARBINARY         = 74
	DDLParserVARCHAR           = 75
	DDLParserVARYING           = 76
	DDLParserWITH              = 77
	DDLParserYEAR              = 78
	DDLParserZEROFILL          = 79
	DDLParserEqual             = 80
	DDLParserSemicolon         = 81
	DDLParserComma             = 82
	DDLParserLeftParenthesis   = 83
	DDLParserRightParenthesis  = 84
	DDLParserTilde             = 85
	DDLParserExclamation       = 86
	DDLParserPlus              = 87
	DDLParserMinus             = 88
	DDLParserInteger           = 89
	DDLParserNumber            = 90
	DDLParserFilesizeLiteral   = 91
	DDLParserLiteral           = 92
	DDLParserPlaceholderString = 93
	DDLParserBackQuotedString  = 94
	DDLParserRawString         = 95
	DDLParserSPACE             = 96
	DDLParserBLOCK_COMMENT     = 97
	DDLParserLINE_COMMENT      = 98
)

// DDLParser rules.
const (
	DDLParserRULE_root                       = 0
	DDLParserRULE_createTableDDL             = 1
	DDLParserRULE_tableName                  = 2
	DDLParserRULE_ifNotExists                = 3
	DDLParserRULE_createDefinitions          = 4
	DDLParserRULE_createDefinition           = 5
	DDLParserRULE_columnDefinition           = 6
	DDLParserRULE_dataType                   = 7
	DDLParserRULE_lengthOneDimension         = 8
	DDLParserRULE_lengthTwoDimension         = 9
	DDLParserRULE_lengthTwoOptionalDimension = 10
	DDLParserRULE_collectionOptions          = 11
	DDLParserRULE_columnConstraint           = 12
	DDLParserRULE_nullNotNull                = 13
	DDLParserRULE_comment                    = 14
	DDLParserRULE_defaultValue               = 15
	DDLParserRULE_primaryKey                 = 16
	DDLParserRULE_unaryOperator              = 17
	DDLParserRULE_constant                   = 18
	DDLParserRULE_currentTimestamp           = 19
	DDLParserRULE_tableConstraint            = 20
	DDLParserRULE_indexOption                = 21
	DDLParserRULE_indexType                  = 22
	DDLParserRULE_indexColumnNames           = 23
	DDLParserRULE_tableOption                = 24
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DDLParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DDLParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) AllCreateTableDDL() []ICreateTableDDLContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICreateTableDDLContext)(nil)).Elem())
	var tst = make([]ICreateTableDDLContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICreateTableDDLContext)
		}
	}

	return tst
}

func (s *RootContext) CreateTableDDL(i int) ICreateTableDDLContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateTableDDLContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICreateTableDDLContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(DDLParserEOF, 0)
}

func (s *RootContext) AllSemicolon() []antlr.TerminalNode {
	return s.GetTokens(DDLParserSemicolon)
}

func (s *RootContext) Semicolon(i int) antlr.TerminalNode {
	return s.GetToken(DDLParserSemicolon, i)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *DDLParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DDLParserRULE_root)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.CreateTableDDL()
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(51)
				p.Match(DDLParserSemicolon)
			}
			{
				p.SetState(52)
				p.CreateTableDDL()
			}

		}
		p.SetState(57)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DDLParserSemicolon {
		{
			p.SetState(58)
			p.Match(DDLParserSemicolon)
		}

	}
	{
		p.SetState(61)
		p.Match(DDLParserEOF)
	}

	return localctx
}

// ICreateTableDDLContext is an interface to support dynamic dispatch.
type ICreateTableDDLContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreateTableDDLContext differentiates from other interfaces.
	IsCreateTableDDLContext()
}

type CreateTableDDLContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateTableDDLContext() *CreateTableDDLContext {
	var p = new(CreateTableDDLContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DDLParserRULE_createTableDDL
	return p
}

func (*CreateTableDDLContext) IsCreateTableDDLContext() {}

func NewCreateTableDDLContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateTableDDLContext {
	var p = new(CreateTableDDLContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DDLParserRULE_createTableDDL

	return p
}

func (s *CreateTableDDLContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateTableDDLContext) CREATE() antlr.TerminalNode {
	return s.GetToken(DDLParserCREATE, 0)
}

func (s *CreateTableDDLContext) TABLE() antlr.TerminalNode {
	return s.GetToken(DDLParserTABLE, 0)
}

func (s *CreateTableDDLContext) TableName() ITableNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITableNameContext)
}

func (s *CreateTableDDLContext) CreateDefinitions() ICreateDefinitionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateDefinitionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateDefinitionsContext)
}

func (s *CreateTableDDLContext) TEMPORARY() antlr.TerminalNode {
	return s.GetToken(DDLParserTEMPORARY, 0)
}

func (s *CreateTableDDLContext) IfNotExists() IIfNotExistsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIfNotExistsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIfNotExistsContext)
}

func (s *CreateTableDDLContext) AllTableOption() []ITableOptionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITableOptionContext)(nil)).Elem())
	var tst = make([]ITableOptionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITableOptionContext)
		}
	}

	return tst
}

func (s *CreateTableDDLContext) TableOption(i int) ITableOptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableOptionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITableOptionContext)
}

func (s *CreateTableDDLContext) AllComma() []antlr.TerminalNode {
	return s.GetTokens(DDLParserComma)
}

func (s *CreateTableDDLContext) Comma(i int) antlr.TerminalNode {
	return s.GetToken(DDLParserComma, i)
}

func (s *CreateTableDDLContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CreateTableDDLContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CreateTableDDLContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.EnterCreateTableDDL(s)
	}
}

func (s *CreateTableDDLContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.ExitCreateTableDDL(s)
	}
}

func (p *DDLParser) CreateTableDDL() (localctx ICreateTableDDLContext) {
	localctx = NewCreateTableDDLContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DDLParserRULE_createTableDDL)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(DDLParserCREATE)
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DDLParserTEMPORARY {
		{
			p.SetState(64)
			p.Match(DDLParserTEMPORARY)
		}

	}
	{
		p.SetState(67)
		p.Match(DDLParserTABLE)
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DDLParserIF {
		{
			p.SetState(68)
			p.IfNotExists()
		}

	}
	{
		p.SetState(71)
		p.TableName()
	}
	{
		p.SetState(72)
		p.CreateDefinitions()
	}
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DDLParserAUTO_INCREMENT)|(1<<DDLParserCHARACTER)|(1<<DDLParserCHARSET)|(1<<DDLParserCOLLATE)|(1<<DDLParserCOMMENT)|(1<<DDLParserDEFAULT)|(1<<DDLParserENGINE))) != 0 {
		{
			p.SetState(73)
			p.TableOption()
		}
		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DDLParserAUTO_INCREMENT)|(1<<DDLParserCHARACTER)|(1<<DDLParserCHARSET)|(1<<DDLParserCOLLATE)|(1<<DDLParserCOMMENT)|(1<<DDLParserDEFAULT)|(1<<DDLParserENGINE))) != 0) || _la == DDLParserComma {
			p.SetState(75)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == DDLParserComma {
				{
					p.SetState(74)
					p.Match(DDLParserComma)
				}

			}
			{
				p.SetState(77)
				p.TableOption()
			}

			p.SetState(82)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}

// ITableNameContext is an interface to support dynamic dispatch.
type ITableNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTableNameContext differentiates from other interfaces.
	IsTableNameContext()
}

type TableNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTableNameContext() *TableNameContext {
	var p = new(TableNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DDLParserRULE_tableName
	return p
}

func (*TableNameContext) IsTableNameContext() {}

func NewTableNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TableNameContext {
	var p = new(TableNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DDLParserRULE_tableName

	return p
}

func (s *TableNameContext) GetParser() antlr.Parser { return s.parser }

func (s *TableNameContext) BackQuotedString() antlr.TerminalNode {
	return s.GetToken(DDLParserBackQuotedString, 0)
}

func (s *TableNameContext) RawString() antlr.TerminalNode {
	return s.GetToken(DDLParserRawString, 0)
}

func (s *TableNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TableNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TableNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.EnterTableName(s)
	}
}

func (s *TableNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.ExitTableName(s)
	}
}

func (p *DDLParser) TableName() (localctx ITableNameContext) {
	localctx = NewTableNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DDLParserRULE_tableName)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		_la = p.GetTokenStream().LA(1)

		if !(_la == DDLParserBackQuotedString || _la == DDLParserRawString) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IIfNotExistsContext is an interface to support dynamic dispatch.
type IIfNotExistsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIfNotExistsContext differentiates from other interfaces.
	IsIfNotExistsContext()
}

type IfNotExistsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIfNotExistsContext() *IfNotExistsContext {
	var p = new(IfNotExistsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DDLParserRULE_ifNotExists
	return p
}

func (*IfNotExistsContext) IsIfNotExistsContext() {}

func NewIfNotExistsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IfNotExistsContext {
	var p = new(IfNotExistsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DDLParserRULE_ifNotExists

	return p
}

func (s *IfNotExistsContext) GetParser() antlr.Parser { return s.parser }

func (s *IfNotExistsContext) IF() antlr.TerminalNode {
	return s.GetToken(DDLParserIF, 0)
}

func (s *IfNotExistsContext) NOT() antlr.TerminalNode {
	return s.GetToken(DDLParserNOT, 0)
}

func (s *IfNotExistsContext) EXISTS() antlr.TerminalNode {
	return s.GetToken(DDLParserEXISTS, 0)
}

func (s *IfNotExistsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfNotExistsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IfNotExistsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.EnterIfNotExists(s)
	}
}

func (s *IfNotExistsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DDLParserListener); ok {
		listenerT.ExitIfNotExists(s)
	}
}

func (p *DDLParser) IfNotExists() (localctx IIfNotExistsContext) {
	localctx = NewIfNotExistsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DDLParserRULE_ifNotExists)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Match(DDLParserIF)
	}
	{
		p.SetState(88)
		p.Match(DDLParserNOT)
	}
	{
		p.SetState(89)
		p.Match(DDLParserEXISTS)
	}

	return localctx
}

// ICreateDefinitionsContext is an interface to support dynamic dispatch.
type ICreateDefinitionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreateDefinitionsContext differentiates from other interfaces.
	IsCreateDefinitionsContext()
}

type CreateDefinitionsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateDefinitionsContext() *CreateDefinitionsContext {
	var p = new(CreateDefinitionsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DDLParserRULE_createDefinitions
	return p
}

func (*CreateDefinitionsContext) IsCreateDefinitionsContext() {}

func NewCreateDefinitionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateDefinitionsContext {
	var p = new(CreateDefinitionsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DDLParserRULE_createDefinitions

	return p
}

func (s *CreateDefinitionsContext) GetParser() antlr.Parser { return s.parser }

func (s *CreateDefinitionsContext) LeftParenthesis() antlr.TerminalNode {
	return s.GetToken(DDLParserLeftParenthesis, 0)
}

func (s *CreateDefinitionsContext) AllCreateDefinition() []ICreateDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICreateDefinitionContext)(nil)).Elem())
	var tst = make([]ICreateDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICreateDefinitionContext)
		}
	}

	return tst
}

func (s *CreateDefinitionsContext) CreateDefinition(i int) ICreateDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICreateDefinitionContext)
}

func (s *CreateDefinitionsContext) RightParenthesis() antlr.TerminalNode {
	return s.GetToken(DDLParserRightParenthesis, 0)
}

func (s *CreateDefinitionsContext) AllComma() []antlr.TerminalNode {
	return s.GetTokens(DDLParserComma)
}

func (s *CreateDefinitionsContext) Comma(i int) antlr.TerminalNode {
	return s.GetToken(DDLParserComma, i)
}

func (s *CreateDefinitionsContext) GetRuleContext() antlr.RuleContext {
	return s
}
